# uptime-monitor

./: .dockerignore  .gitignore  Dockerfile  check_db.py  docker-compose.yml  fed-cred.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: db.config
app/core/: database.py  security.py
app/middleware/: logging_middleware.py  rate_limiter.py
app/models/: schema.py
app/routes/: auth.py  health.py  monitor.py
app/services/: monitor_service.py
app/workers/: checker.py
